fix the learn, teach, support cta banners to be below the login block/user menu on mobile

--- a/sites/all/themes/nerdsummit/scss/style.scss
+++ b/sites/all/themes/nerdsummit/scss/style.scss
@@ -425,7 +425,7 @@ input, .form-item {
     margin-right: 24px;
   }
   div#block-nerd-homepage-login-registration-block, #block-system-user-menu {
-    position: absolute;
+    //position: absolute;
     right: 0px;
     top: 0px;
     width: 100%;
